--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Gabigordo's Barber Shop</title>
 </head>
-<body class="body-splash-screen">
+<body id="body-splash-screen">
     
     <div class="splash-screen-container">
         <img id="splash-screen" src="images/splash screen.png" alt="Gabigordo's Barber Shop splash screen">
@@ -17,8 +17,8 @@
 <script>
 
     setTimeout(() => {
-        window.location.href = "login.html";
-    }, 5000);
+        window.location.href="login.html";
+    }, 2500);
 
 </script>
 
