--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body id="body-splash-screen">
     
     <div class="splash-screen-container">
-        <img id="splash-screen" src="images/splash screen.png" alt="Gabigordo's Barber Shop splash screen">
+        <img id="splash-screen" src="images/gabigordo-icon.png" alt="Gabigordo's Barber Shop splash screen">
     </div>
 
 </body>
@@ -18,7 +18,7 @@
 
     setTimeout(() => {
         window.location.href="login.html";
-    }, 2500);
+    }, 5000);
 
 </script>
 
